fix(styles/pages/EditorPage): fix spacing

--- a/src/styles/pages/EditorPage.scss
+++ b/src/styles/pages/EditorPage.scss
@@ -253,6 +253,7 @@ $sidebar-width: 250px;
 
                     &:last-of-type {
                         margin-right: 10px;
+                        margin-left: 5px;
                     } 
                 }
     
